--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "eslint-plugin-jest-dom": "^5.0.2",
     "eslint-plugin-testing-library": "^6.0.0",
     "jest": "^29.6.2",
